Adding new code

--- a/Framework/test-output/old/Suite/reporter-output.html
+++ b/Framework/test-output/old/Suite/reporter-output.html
@@ -2,6 +2,6 @@
 <tr><td>Setting done - Test can be started</td></tr>
 <tr><td>Trying to start the browser and getting the application ready</td></tr>
 <tr><td>Browser and application up and running</td></tr>
-<tr><td>Test is about to end.</td></tr>
 <tr><td>Screenshot captured</td></tr>
+<tr><td>Test completed >> Reports Generated</td></tr>
 </table>
