--- a/Framework/test-output/old/Suite/classes.html
+++ b/Framework/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.learnautomation.testcases.LoginTestCRM</td>
+<td>com.learnautomation.testcases.LoginToCrmWithXL</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>teardownMethod</td>
+<td>tearDownMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
