--- a/Framework/test-output/old/Suite/methods.html
+++ b/Framework/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e72">  <td>23/03/27 16:08:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.learnautomation.testcases.LoginTestCRM@1a6d8329]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/03/27 16:08:43</td>   <td>-2378</td> <td title="&gt;&gt;BaseClass.setUpSuite()[pri:0, instance:com.learnautomation.testcases.LoginTestCRM@1a6d8329]">&gt;&gt;setUpSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/03/27 16:09:07</td>   <td>21677</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.learnautomation.testcases.LoginTestCRM@1a6d8329]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7de877">  <td>23/03/27 16:08:59</td>   <td>13236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCRM.login_app()[pri:0, instance:com.learnautomation.testcases.LoginTestCRM@1a6d8329]">login_app</td> 
-  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/03/27 16:09:07</td>   <td>21502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMethod(org.testng.ITestResult)[pri:0, instance:com.learnautomation.testcases.LoginTestCRM@1a6d8329]">&lt;&lt;teardownMethod</td> 
-<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/03/30 13:25:15</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setUpSuite()[pri:0, instance:com.learnautomation.testcases.LoginToCrmWithXL@1283bb96]">&gt;&gt;setUpSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/03/30 13:25:16</td>   <td>1449</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.learnautomation.testcases.LoginToCrmWithXL@1283bb96]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/03/30 13:25:39</td>   <td>24519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.learnautomation.testcases.LoginToCrmWithXL@1283bb96]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/03/30 13:25:40</td>   <td>25283</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.learnautomation.testcases.LoginToCrmWithXL@1283bb96]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>23/03/30 13:25:29</td>   <td>14305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginToCrmWithXL.login_app()[pri:0, instance:com.learnautomation.testcases.LoginToCrmWithXL@1283bb96]">login_app</td> 
+  <td>main@640070680</td>   <td></td> </tr>
 </table>
